@@ -6,6 +6,7 @@ import com.mst.matt.tradingplatformapp.service.OhlcvStorageService;
 import com.mst.matt.tradingplatformapp.service.ProfilePersistenceService;
 import com.mst.matt.tradingplatformapp.service.analysis.AnalysisService;
 import com.mst.matt.tradingplatformapp.service.analysis.AnalysisService.AnalysisResult;
+import com.mst.matt.tradingplatformapp.service.analysis.IndicatorComputeService;
 import com.mst.matt.tradingplatformapp.service.analysis.SignalScoringService.Recommendation;
 import com.mst.matt.tradingplatformapp.service.analysis.SignalScoringService.SignalResult;
 import com.mst.matt.tradingplatformapp.service.price.AssetClassDetector;
@@ -19,14 +20,8 @@ import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.scene.control.ComboBox;
-import javafx.scene.control.Label;
-import javafx.scene.control.ListCell;
-import javafx.scene.control.CheckBox;
-import javafx.scene.control.ToggleButton;
-import javafx.scene.control.ToggleGroup;
-import javafx.scene.control.Tooltip;
-import javafx.scene.control.Button;
+import javafx.scene.control.*;
+import javafx.scene.layout.HBox;
 import javafx.scene.layout.Pane;
 import net.rgielen.fxweaver.core.FxmlView;
 import org.slf4j.Logger;
@@ -35,14 +30,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Component;
-
-import java.sql.SQLException;
+import org.ta4j.core.BarSeries;
 
 import java.net.URL;
+import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.ResourceBundle;
 
 @Component
@@ -53,28 +46,31 @@ public class ChartController implements Initializable {
 
     public enum ViewMode { CHART, ANALYSIS }
 
-    @FXML private TextField  symbolInput;
-    @FXML private ComboBox<String> symbolCombo;
-    @FXML private Pane       chartPane;
-    @FXML private ComboBox<Integer> barsCombo;
+    // ── FXML injections ───────────────────────────────────────
+    @FXML private TextField            symbolInput;
+    @FXML private ComboBox<String>     symbolCombo;
+    @FXML private Pane                 chartPane;
+    @FXML private ComboBox<Integer>    barsCombo;
     @FXML private ComboBox<MarketDataProvider> chartProviderCombo;
-    @FXML private Label dataSourceLabel;
-    @FXML private ToggleButton tf1m, tf5m, tf15m, tf1h, tf4h, tf1d, tf1w;
-    @FXML private javafx.scene.layout.HBox analysisToolbar;
+    @FXML private Label                dataSourceLabel;
+    // Timeframe buttons — all possible timeframes
+    @FXML private ToggleButton tf1m, tf3m, tf5m, tf15m, tf30m,
+            tf1h, tf2h, tf4h, tf6h, tf8h, tf12h,
+            tf1d, tf3d, tf1w, tf1mo;
+    @FXML private HBox   analysisToolbar;
     @FXML private Button indicatorPickerBtn;
     @FXML private Button analyzeBtn;
-    @FXML private CheckBox chkEma, chkBollinger, chkIchimoku, chkSR,
-            chkVolume, chkMacd, chkRsi;
-    @FXML private javafx.scene.layout.HBox signalBar;
-    @FXML private Label signalLabel, confidenceLabel, bestBuyLabel,
+    @FXML private HBox   signalBar;
+    @FXML private Label  signalLabel, confidenceLabel, bestBuyLabel,
             bestSellLabel, bullBearLabel, currentPriceChartLabel;
 
-    @Autowired private AnalysisService       analysisService;
-    @Autowired private OhlcvStorageService  ohlcvStorageService;
-    @Autowired private PriceRouter           priceRouter;
-    @Autowired private PriceProviderRegistry providerRegistry;
-    @Autowired private UserProfileRepository profileRepository;
-    /** P1 (LOG-FIX): async writer to keep JavaFX thread off JPA commits. */
+    // ── Spring beans ──────────────────────────────────────────
+    @Autowired private AnalysisService          analysisService;
+    @Autowired private IndicatorComputeService  indicatorComputeService;
+    @Autowired private OhlcvStorageService      ohlcvStorageService;
+    @Autowired private PriceRouter              priceRouter;
+    @Autowired private PriceProviderRegistry    providerRegistry;
+    @Autowired private UserProfileRepository    profileRepository;
     @Autowired private ProfilePersistenceService profilePersistence;
     @Autowired @org.springframework.context.annotation.Lazy
     private IndicatorMixerController indicatorMixerController;
@@ -82,12 +78,19 @@ public class ChartController implements Initializable {
     @Value("${app.chart.default-bars:200}")
     private int defaultBars;
 
+    // ── State ─────────────────────────────────────────────────
     private CandlestickChartCanvas chart;
-    private UserProfile activeProfile;
-    private String      currentSymbol    = "BTCUSDT";
-    private String      currentTimeframe = "1h";
-    private int         currentBars;
-    private ViewMode    viewMode = ViewMode.CHART;
+    private UserProfile   activeProfile;
+    private String        currentSymbol    = "BTCUSDT";
+    private String        currentTimeframe = "1h";
+    private int           currentBars;
+    private ViewMode      viewMode         = ViewMode.CHART;
+
+    /**
+     * Active indicator list — one entry per indicator instance the user has added.
+     * Persisted in memory; survives chart refreshes.
+     */
+    private final List<IndicatorDefinition> activeIndicators = new ArrayList<>();
 
     @Override
     public void initialize(URL url, ResourceBundle rb) {
@@ -97,7 +100,9 @@ public class ChartController implements Initializable {
         chart.widthProperty().bind(chartPane.widthProperty());
         chart.heightProperty().bind(chartPane.heightProperty());
         chartPane.getChildren().add(chart);
-        signalBar.managedProperty().bind(signalBar.visibleProperty());
+
+        if (signalBar != null)
+            signalBar.managedProperty().bind(signalBar.visibleProperty());
 
         chartProviderCombo.setCellFactory(lv -> providerLabelCell());
         chartProviderCombo.setButtonCell(providerLabelCell());
@@ -118,19 +123,21 @@ public class ChartController implements Initializable {
                 currentSymbol = text.trim().toUpperCase();
         });
 
-        barsCombo.setItems(FXCollections.observableArrayList(
-                50, 100, 200, 300, 500, 750, 1000));
+        barsCombo.setItems(FXCollections.observableArrayList(50, 100, 200, 300, 500, 750, 1000));
         barsCombo.setValue(defaultBars);
         barsCombo.valueProperty().addListener((o, a, n) -> {
             if (n != null) { currentBars = n; loadChart(); }
         });
 
+        // Timeframe toggle group — wire all buttons
         ToggleGroup tfGroup = new ToggleGroup();
-        for (ToggleButton btn : new ToggleButton[]{tf1m, tf5m, tf15m, tf1h, tf4h, tf1d, tf1w})
-            btn.setToggleGroup(tfGroup);
-        tf1h.setSelected(true);
-        styleTimeframeButtons(tf1h);
+        for (ToggleButton btn : allTimeframeButtons()) {
+            if (btn != null) btn.setToggleGroup(tfGroup);
+        }
+        if (tf1h != null) { tf1h.setSelected(true); styleTimeframeButtons(tf1h); }
     }
+
+    // ── ViewMode ──────────────────────────────────────────────
 
     public void setViewMode(ViewMode mode) {
         this.viewMode = mode == null ? ViewMode.CHART : mode;
@@ -147,19 +154,8 @@ public class ChartController implements Initializable {
             analyzeBtn.setVisible(analysis);
             analyzeBtn.setManaged(analysis);
         }
-        // managed follows visible (bound in initialize) — never call setManaged on signalBar
-        if (signalBar != null && !analysis) {
-            signalBar.setVisible(false);
-        }
+        if (signalBar != null && !analysis) signalBar.setVisible(false);
         chart.setAnalysisMode(analysis);
-        if (analysis) {
-            if (chkEma != null && !chkEma.isSelected()
-                    && chkBollinger != null && !chkBollinger.isSelected()) {
-                chkEma.setSelected(true);
-                chkVolume.setSelected(true);
-            }
-        }
-        syncOverlayTogglesToChart();
     }
 
     public void prepareView() {
@@ -168,8 +164,7 @@ public class ChartController implements Initializable {
             symbolInput.setText(currentSymbol);
         else
             currentSymbol = symbolInput.getText().trim().toUpperCase();
-        if (symbolCombo.getValue() == null)
-            symbolCombo.setValue(currentSymbol);
+        if (symbolCombo.getValue() == null) symbolCombo.setValue(currentSymbol);
         refreshProviderCombo();
         loadChart();
     }
@@ -189,10 +184,9 @@ public class ChartController implements Initializable {
 
     private void refreshProviderCombo() {
         if (activeProfile == null) return;
-        // P2 (LOG-FIX): null-safe asset class lookup.
         var focus = activeProfile.getAssetFocus() != null
                 ? activeProfile.getAssetFocus()
-                : com.mst.matt.tradingplatformapp.model.UserProfile.ProfileAssetFocus.MULTI;
+                : UserProfile.ProfileAssetFocus.MULTI;
         AssetClass asset = AssetClassDetector.fromProfileFocus(focus, currentSymbol);
         List<MarketDataProvider> options = new ArrayList<>();
         options.add(MarketDataProvider.AUTO);
@@ -202,16 +196,16 @@ public class ChartController implements Initializable {
                 MarketDataProvider.fromString(activeProfile.getChartProvider()));
     }
 
+    // ── Chart loading ─────────────────────────────────────────
+
     @FXML public void onChartProviderChanged() {
         if (activeProfile == null) return;
         MarketDataProvider chosen = chartProviderCombo.getValue();
         if (chosen == null) return;
         activeProfile.setChartProvider(chosen.name());
-        // P1 (LOG-FIX): never block the JavaFX UI thread on a SQLite commit.
         profilePersistence.saveAsync(activeProfile);
         Thread.ofVirtual().start(() -> {
-            ohlcvStorageService.refreshBars(
-                    currentSymbol, currentTimeframe, currentBars, activeProfile);
+            ohlcvStorageService.refreshBars(currentSymbol, currentTimeframe, currentBars, activeProfile);
             loadChart();
         });
     }
@@ -225,29 +219,33 @@ public class ChartController implements Initializable {
 
     private void loadChart() {
         if (activeProfile == null) return;
-
         Thread.ofVirtual().start(() -> {
             try {
                 AnalysisResult result = loadAnalysisWithRetry();
                 var quoteOpt = priceRouter.getQuote(currentSymbol, activeProfile);
                 String provider = PriceRouter.getLastProviderName();
 
+                // Compute all active IndicatorDefinitions on the bar series
+                if (!activeIndicators.isEmpty() && !result.getBars().isEmpty()) {
+                    BarSeries series = analysisService.buildBarSeries(
+                            result.getBars(), currentSymbol);
+                    indicatorComputeService.computeAll(activeIndicators, series);
+                }
+
                 Platform.runLater(() -> {
                     double lastPrice = result.getBars().isEmpty() ? Double.NaN
-                            : result.getBars().getLast().getClose().doubleValue();
+                            : result.getBars().get(result.getBars().size() - 1)
+                            .getClose().doubleValue();
                     quoteOpt.filter(q -> q.getPrice() != null)
                             .ifPresent(q -> chart.setLastPrice(q.getPrice().doubleValue()));
-                    if (Double.isNaN(chart.getLastPrice()) && !Double.isNaN(lastPrice)) {
+                    if (Double.isNaN(chart.getLastPrice()) && !Double.isNaN(lastPrice))
                         chart.setLastPrice(lastPrice);
-                    }
 
-                    chart.setData(result.getBars(),
-                            result.getIndicators(),
-                            result.getSrResult());
+                    chart.setData(result.getBars(), activeIndicators, result.getSrResult());
 
-                    if (viewMode == ViewMode.ANALYSIS && result.getSignal() != null) {
+                    if (viewMode == ViewMode.ANALYSIS && result.getSignal() != null)
                         updateSignalBar(result.getSignal());
-                    }
+
                     if (result.getIndicators() != null) {
                         double px = quoteOpt
                                 .map(q -> q.getPrice())
@@ -259,25 +257,22 @@ public class ChartController implements Initializable {
                     }
 
                     quoteOpt.filter(q -> q.getPrice() != null).ifPresent(q -> {
-                        if (viewMode == ViewMode.ANALYSIS) {
+                        if (viewMode == ViewMode.ANALYSIS && currentPriceChartLabel != null) {
                             currentPriceChartLabel.setText(
                                     "$" + q.getPrice().toPlainString()
                                             + (q.isUp() ? " ▲" : " ▼"));
-                            currentPriceChartLabel.setStyle("-fx-font-size:18px;"
-                                    + "-fx-font-weight:bold; -fx-text-fill:"
-                                    + (q.isUp() ? "#3fb950" : "#f85149") + ";");
+                            currentPriceChartLabel.setStyle(
+                                    "-fx-font-size:18px;-fx-font-weight:bold;-fx-text-fill:"
+                                            + (q.isUp() ? "#3fb950" : "#f85149") + ";");
                         }
                     });
-                    // T-14: surface which API actually supplied the OHLCV chart.
                     dataSourceLabel.setText("OHLCV via " + provider);
                     dataSourceLabel.setTooltip(new Tooltip(
-                            "Last successful price provider for " + currentSymbol
-                                    + " — see docs/API_PROVIDERS.md for the fallback chain."));
+                            "Last successful price provider for " + currentSymbol));
                 });
             } catch (Exception e) {
                 log.warn("Chart load failed for {} {}: {}", currentSymbol, currentTimeframe,
                         e.getMessage());
-                // Never show error dialogs to the user — log only
                 Platform.runLater(() ->
                         dataSourceLabel.setText("⚠ Data unavailable — retrying…"));
             }
@@ -286,52 +281,88 @@ public class ChartController implements Initializable {
 
     private AnalysisResult loadAnalysisWithRetry() throws Exception {
         try {
-            return analysisService.analyze(
-                    currentSymbol, currentTimeframe, currentBars, activeProfile);
+            return analysisService.analyze(currentSymbol, currentTimeframe, currentBars, activeProfile);
         } catch (DataIntegrityViolationException dup) {
-            log.debug("Registry race on {} {} — retrying chart load", currentSymbol, currentTimeframe);
+            log.debug("Registry race on {} {} — retrying", currentSymbol, currentTimeframe);
             Thread.sleep(150);
-            return analysisService.analyze(
-                    currentSymbol, currentTimeframe, currentBars, activeProfile);
+            return analysisService.analyze(currentSymbol, currentTimeframe, currentBars, activeProfile);
         }
-    }
-
-    private static String friendlyChartError(Throwable e) {
-        Throwable root = e;
-        while (root.getCause() != null) root = root.getCause();
-        String msg = root.getMessage() == null ? "" : root.getMessage();
-        if (root instanceof SQLException
-                || msg.contains("HikariPool")
-                || msg.contains("Connection is not available")) {
-            return "Database is busy loading market data. Please wait a moment and try Refresh.";
-        }
-        if (e instanceof DataIntegrityViolationException
-                || msg.contains("duplicate key")
-                || msg.contains("idx_mdt_symbol_tf_provider")) {
-            return "Market data registry is syncing. Please try Refresh in a few seconds.";
-        }
-        return "Could not load chart data. Check your connection or try Refresh.";
     }
 
     @FXML public void onRefresh() {
         if (activeProfile == null) return;
         Thread.ofVirtual().start(() -> {
-            ohlcvStorageService.refreshBars(
-                    currentSymbol, currentTimeframe, currentBars, activeProfile);
+            ohlcvStorageService.refreshBars(currentSymbol, currentTimeframe, currentBars, activeProfile);
             loadChart();
         });
     }
 
     @FXML public void onAnalyze() { loadChart(); }
 
+    // ── Timeframe ─────────────────────────────────────────────
+
+    @FXML public void onTimeframe(javafx.event.ActionEvent e) {
+        ToggleButton src = (ToggleButton) e.getSource();
+        if (!src.isSelected()) { src.setSelected(true); return; }
+        currentTimeframe = timeframeFor(src);
+        styleTimeframeButtons(src);
+        loadChart();
+    }
+
+    private String timeframeFor(ToggleButton btn) {
+        return switch (btn.getText()) {
+            case "1D"  -> "1d";
+            case "3D"  -> "3d";
+            case "1W"  -> "1w";
+            case "1Mo" -> "1mo";
+            default    -> btn.getText().toLowerCase();
+        };
+    }
+
+    private void styleTimeframeButtons(ToggleButton active) {
+        for (ToggleButton btn : allTimeframeButtons()) {
+            if (btn == null) continue;
+            btn.setStyle(btn == active ? activeStyle() : inactiveStyle());
+        }
+    }
+
+    private ToggleButton[] allTimeframeButtons() {
+        return new ToggleButton[]{tf1m, tf3m, tf5m, tf15m, tf30m,
+                tf1h, tf2h, tf4h, tf6h, tf8h, tf12h,
+                tf1d, tf3d, tf1w, tf1mo};
+    }
+
+    // ── Indicator Picker ──────────────────────────────────────
+
+    @FXML public void onOpenIndicatorPicker() {
+        IndicatorPickerDialog.show(indicatorPickerBtn, activeIndicators, updatedList -> {
+            // Recompute indicators when list changes
+            Thread.ofVirtual().start(() -> {
+                try {
+                    AnalysisResult cached = analysisService.getCached(currentSymbol, currentTimeframe)
+                            .orElse(null);
+                    if (cached != null && !cached.getBars().isEmpty()) {
+                        BarSeries series = analysisService.buildBarSeries(
+                                cached.getBars(), currentSymbol);
+                        indicatorComputeService.computeAll(activeIndicators, series);
+                    }
+                } catch (Exception ex) {
+                    log.warn("Indicator recompute failed: {}", ex.getMessage());
+                }
+                Platform.runLater(() -> chart.setIndicators(activeIndicators));
+            });
+        });
+    }
+
+    // ── Signal bar ────────────────────────────────────────────
+
     private void updateSignalBar(SignalResult signal) {
+        if (signalBar == null) return;
         signalBar.setVisible(true);
         Recommendation rec = signal.getRecommendation();
         signalLabel.setText(rec.label);
-        signalLabel.setStyle("-fx-font-weight:bold; -fx-font-size:14px;"
-                + "-fx-text-fill:" + rec.textColor + ";");
-        confidenceLabel.setText(String.format("Confidence: %.1f%%",
-                signal.getConfidence()));
+        signalLabel.setStyle("-fx-font-weight:bold;-fx-font-size:14px;-fx-text-fill:" + rec.textColor + ";");
+        confidenceLabel.setText(String.format("Confidence: %.1f%%", signal.getConfidence()));
         bestBuyLabel.setText("$" + fmtPrice(signal.getBestBuyPrice()));
         bestSellLabel.setText("$" + fmtPrice(signal.getBestSellPrice()));
         bullBearLabel.setText("🟢 " + signal.getBullishCount()
@@ -339,68 +370,7 @@ public class ChartController implements Initializable {
                 + "  🔴 " + signal.getBearishCount());
     }
 
-    @FXML public void onTimeframe(javafx.event.ActionEvent e) {
-        ToggleButton src = (ToggleButton) e.getSource();
-        if (!src.isSelected()) {
-            src.setSelected(true);
-            return;
-        }
-        currentTimeframe = switch (src.getText()) {
-            case "1D" -> "1d";
-            case "1W" -> "1w";
-            default   -> src.getText().toLowerCase();
-        };
-        styleTimeframeButtons(src);
-        loadChart();
-    }
-
-    private void styleTimeframeButtons(ToggleButton active) {
-        for (ToggleButton btn : new ToggleButton[]{tf1m, tf5m, tf15m, tf1h, tf4h, tf1d, tf1w}) {
-            btn.setStyle(btn == active ? getActiveStyle() : getInactiveStyle());
-        }
-    }
-
-    @FXML public void onToggleEma()       { chart.toggleEma(); }
-    @FXML public void onToggleBollinger() { chart.toggleBollinger(); }
-    @FXML public void onToggleIchimoku()  { chart.toggleIchimoku(); }
-    @FXML public void onToggleSR()        { chart.toggleSR(); }
-    @FXML public void onToggleVolume()    { chart.toggleVolume(); }
-    @FXML public void onToggleMacd()      { chart.toggleMacd(); }
-    @FXML public void onToggleRsi()       { chart.toggleRsi(); }
-
-    @FXML public void onOpenIndicatorPicker() {
-        // Build current state from checkboxes (including any the toolbar hides)
-        Map<String, Boolean> state = new LinkedHashMap<>();
-        state.put("EMA",                 chkEma       != null && chkEma.isSelected());
-        state.put("Bollinger Bands",     chkBollinger != null && chkBollinger.isSelected());
-        state.put("Ichimoku Cloud",      chkIchimoku  != null && chkIchimoku.isSelected());
-        state.put("Support / Resistance",chkSR        != null && chkSR.isSelected());
-        state.put("Volume",              chkVolume    != null && chkVolume.isSelected());
-        state.put("MACD",                chkMacd      != null && chkMacd.isSelected());
-        state.put("RSI",                 chkRsi       != null && chkRsi.isSelected());
-
-        // Show the popup — changes are applied immediately via checkbox listener
-        IndicatorPickerDialog.show(indicatorPickerBtn, state, selected -> {
-            if (chkEma        != null) chkEma.setSelected(selected.getOrDefault("EMA", false));
-            if (chkBollinger  != null) chkBollinger.setSelected(selected.getOrDefault("Bollinger Bands", false));
-            if (chkIchimoku   != null) chkIchimoku.setSelected(selected.getOrDefault("Ichimoku Cloud", false));
-            if (chkSR         != null) chkSR.setSelected(selected.getOrDefault("Support / Resistance", false));
-            if (chkVolume     != null) chkVolume.setSelected(selected.getOrDefault("Volume", false));
-            if (chkMacd       != null) chkMacd.setSelected(selected.getOrDefault("MACD", false));
-            if (chkRsi        != null) chkRsi.setSelected(selected.getOrDefault("RSI", false));
-            syncOverlayTogglesToChart();
-        });
-    }
-
-    private void syncOverlayTogglesToChart() {
-        if (chkEma != null) chart.setShowEma(chkEma.isSelected());
-        if (chkBollinger != null) chart.setShowBollinger(chkBollinger.isSelected());
-        if (chkIchimoku != null) chart.setShowIchimoku(chkIchimoku.isSelected());
-        if (chkSR != null) chart.setShowSR(chkSR.isSelected());
-        if (chkVolume != null) chart.setShowVolume(chkVolume.isSelected());
-        if (chkMacd != null) chart.setShowMacd(chkMacd.isSelected());
-        if (chkRsi != null) chart.setShowRsi(chkRsi.isSelected());
-    }
+    // ── Utilities ─────────────────────────────────────────────
 
     private static ListCell<MarketDataProvider> providerLabelCell() {
         return new ListCell<>() {
@@ -411,13 +381,13 @@ public class ChartController implements Initializable {
         };
     }
 
-    private String getActiveStyle() {
-        return "-fx-background-color:#1f6feb; -fx-text-fill:white;"
-                + "-fx-background-radius:6; -fx-padding:4 8; -fx-cursor:hand;";
+    private String activeStyle() {
+        return "-fx-background-color:#1f6feb;-fx-text-fill:white;"
+                + "-fx-background-radius:6;-fx-padding:4 8;-fx-cursor:hand;";
     }
-    private String getInactiveStyle() {
-        return "-fx-background-color:#21262d; -fx-text-fill:#e6edf3;"
-                + "-fx-background-radius:6; -fx-padding:4 8; -fx-cursor:hand;";
+    private String inactiveStyle() {
+        return "-fx-background-color:#21262d;-fx-text-fill:#e6edf3;"
+                + "-fx-background-radius:6;-fx-padding:4 8;-fx-cursor:hand;";
     }
 
     private String fmtPrice(double p) {
