@@ -1,10 +1,10 @@
 package com.mst.matt.tradingplatformapp.ui.chart;
 
+import com.mst.matt.tradingplatformapp.model.IndicatorDefinition;
+import com.mst.matt.tradingplatformapp.model.IndicatorDefinition.DisplayPane;
 import com.mst.matt.tradingplatformapp.model.OhlcvBar;
-import com.mst.matt.tradingplatformapp.service.analysis.IndicatorResult;
-import com.mst.matt.tradingplatformapp.service.analysis.IchimokuResult;
-import com.mst.matt.tradingplatformapp.service.analysis.SupportResistanceService.SRResult;
 import com.mst.matt.tradingplatformapp.service.analysis.SupportResistanceService.SRLevel;
+import com.mst.matt.tradingplatformapp.service.analysis.SupportResistanceService.SRResult;
 import javafx.scene.canvas.Canvas;
 import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.input.MouseEvent;
@@ -14,34 +14,31 @@ import javafx.scene.text.Font;
 import javafx.scene.text.TextAlignment;
 
 import java.time.format.DateTimeFormatter;
-import java.util.List;
+import java.util.*;
 
 /**
  * Professional candlestick chart rendered on a JavaFX Canvas.
  *
- * Features:
- *   ✅ OHLC candlestick bodies and wicks
- *   ✅ Volume bars at bottom (30% height)
- *   ✅ EMA Fast / Slow overlays
- *   ✅ EMA 50 / 200 (Golden/Death Cross)
- *   ✅ Bollinger Bands (upper, middle, lower with cloud fill)
- *   ✅ Ichimoku Cloud (Kumo fill, Tenkan, Kijun lines)
- *   ✅ Support & Resistance horizontal lines (Fibonacci + Pivot)
- *   ✅ Mouse crosshair with OHLCV tooltip
- *   ✅ Scroll to zoom, drag to pan
- *   ✅ Toggleable indicator overlays
+ * Key improvements over previous version:
+ *  ✅ Indicator system based on {@link IndicatorDefinition} — unlimited indicators,
+ *     each with its own color, line weight, and settings.
+ *  ✅ Correct zoom/pan: series index tracking uses absolute bar indices referenced
+ *     against the full loaded series, never against visible-only sub-lists.
+ *  ✅ Sub-pane indicators (MACD, RSI, etc.) dynamically expand/collapse.
+ *  ✅ Multi-line indicators (Bollinger, Keltner, Ichimoku) draw fills + borders.
+ *  ✅ Parabolic SAR drawn as dots.
+ *  ✅ Volume toggleable.
+ *  ✅ Drag to pan, scroll to zoom (anchor under mouse).
  */
 public class CandlestickChartCanvas extends Canvas {
 
-    // ── Layout constants ─────────────────────────────────────
-    private static final double PRICE_AREA_HEIGHT_PCT  = 0.68;
-    private static final double VOLUME_AREA_HEIGHT_PCT = 0.14;
-    private static final double MACD_AREA_HEIGHT_PCT   = 0.09;
-    private static final double RSI_AREA_HEIGHT_PCT    = 0.09;
+    // ── Layout constants ──────────────────────────────────────
     private static final double PADDING_LEFT   = 60;
-    private static final double PADDING_RIGHT  = 80;  // price labels
+    private static final double PADDING_RIGHT  = 82;
     private static final double PADDING_TOP    = 20;
-    private static final double PADDING_BOTTOM = 24;
+    private static final double PADDING_BOTTOM = 26;
+    private static final double VOL_FRAC       = 0.14;  // fraction of full height for volume
+    private static final double SUB_FRAC       = 0.15;  // fraction per sub-pane indicator
 
     // ── Colors ────────────────────────────────────────────────
     private static final Color BG         = Color.web("#0d1117");
@@ -55,83 +52,73 @@ public class CandlestickChartCanvas extends Canvas {
     private static final Color BEAR_WICK  = Color.web("#f8514999");
     private static final Color VOL_BULL   = Color.web("#3fb95066");
     private static final Color VOL_BEAR   = Color.web("#f8514966");
-    private static final Color EMA_FAST   = Color.web("#388bfd");
-    private static final Color EMA_SLOW   = Color.web("#bc8cff");
-    private static final Color EMA_50     = Color.web("#e3b341");
-    private static final Color EMA_200    = Color.web("#f85149");
-    private static final Color BB_UPPER   = Color.web("#388bfd88");
-    private static final Color BB_LOWER   = Color.web("#388bfd88");
-    private static final Color BB_FILL    = Color.web("#388bfd15");
-    private static final Color ICH_TENKAN = Color.web("#f85149");
-    private static final Color ICH_KIJUN  = Color.web("#388bfd");
+    private static final Color CROSS      = Color.web("#e6edf355");
+    private static final Color SR_SUP     = Color.web("#3fb95099");
+    private static final Color SR_RES     = Color.web("#f8514999");
     private static final Color ICH_BULL   = Color.web("#3fb95030");
     private static final Color ICH_BEAR   = Color.web("#f8514930");
-    private static final Color CROSS      = Color.web("#e6edf355");
-    private static final Color FIB_LINE   = Color.web("#d2992299");
-    private static final Color PIVOT_LINE = Color.web("#bc8cff99");
-    private static final Color SR_SUP     = Color.web("#3fb95066");
-    private static final Color SR_RES     = Color.web("#f8514966");
+
+    private static final Font FONT_SMALL  = Font.font("Segoe UI", 11);
+    private static final Font FONT_MEDIUM = Font.font("Segoe UI", 12);
+    private static final DateTimeFormatter DTF =
+            DateTimeFormatter.ofPattern("MM/dd HH:mm");
+    private static final DateTimeFormatter DTF_DATE =
+            DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
     // ── Data ──────────────────────────────────────────────────
-    private List<OhlcvBar>    bars;
-    private IndicatorResult   indicators;
-    private SRResult          srResult;
+    private List<OhlcvBar>              bars;
+    private List<IndicatorDefinition>   indicators  = new ArrayList<>();
+    private SRResult                    srResult;
+    private double                      lastPrice   = Double.NaN;
 
-    // ── View state ────────────────────────────────────────────
-    private int   visibleBars   = 100;
-    private int   startBarIndex = 0;
-    private double candleWidth  = 8.0;
-    private double mouseX, mouseY;
-    private boolean showCrosshair    = false;
+    // ── View state — all relative to full bars list ───────────
+    /**
+     * Index (into {@link #bars}) of the first visible bar.
+     * INVARIANT: 0 ≤ startBarIndex ≤ bars.size() - visibleBars
+     */
+    private int    startBarIndex = 0;
+
+    /**
+     * Number of bars visible in the chart at the current zoom level.
+     * INVARIANT: 1 ≤ visibleBars ≤ bars.size()
+     */
+    private int    visibleBars   = 100;
+
+    // ── Overlays ──────────────────────────────────────────────
+    private boolean showVolume    = true;
+    private boolean analysisMode  = false;
+
+    // ── Mouse / drag ─────────────────────────────────────────
+    private double  mouseX, mouseY;
+    private boolean showCrosshair  = false;
     private double  dragStartX;
     private int     dragStartBar;
 
-    // ── Overlay toggles ───────────────────────────────────────
-    private boolean analysisMode    = false;
-    private boolean showEma         = false;
-    private boolean showBollinger   = false;
-    private boolean showIchimoku    = false;
-    private boolean showSR          = false;
-    private boolean showVolume      = true;
-    private boolean showMacd        = false;
-    private boolean showRsi         = false;
-    private double  lastPrice       = Double.NaN;
-
-    private static final Font FONT_SMALL  =
-            Font.font("Segoe UI", 11);
-    private static final Font FONT_MEDIUM =
-            Font.font("Segoe UI", 12);
-    private static final Font FONT_BOLD   =
-            Font.font("Segoe UI", 13);
-    private static final DateTimeFormatter DTF =
-            DateTimeFormatter.ofPattern("MM/dd HH:mm");
+    // ── Constructors ──────────────────────────────────────────
 
     public CandlestickChartCanvas() {
         super(800, 600);
+        init();
+    }
+
+    public CandlestickChartCanvas(double w, double h) {
+        super(w, h);
+        init();
+    }
+
+    private void init() {
         setFocusTraversable(true);
         setupMouseHandlers();
-        // Wire resize so the chart re-renders whenever the parent Pane changes size
         widthProperty().addListener((o, a, b) -> render());
         heightProperty().addListener((o, a, b) -> render());
     }
 
-    public CandlestickChartCanvas(double width, double height) {
-        super(width, height);
-        setFocusTraversable(true);
-        setupMouseHandlers();
-
-        // Resize listener
-        widthProperty().addListener((o,a,b) -> render());
-        heightProperty().addListener((o,a,b) -> render());
-    }
-
     // ── Public API ────────────────────────────────────────────
 
-    public void setData(List<OhlcvBar> bars,
-                        IndicatorResult indicators,
-                        SRResult srResult) {
+    /** Sets chart data and resets view. */
+    public void setData(List<OhlcvBar> bars, List<IndicatorDefinition> indicators, SRResult srResult) {
         this.bars       = bars;
-        this.indicators = indicators;
+        this.indicators = indicators != null ? indicators : new ArrayList<>();
         this.srResult   = srResult;
 
         if (bars != null && !bars.isEmpty()) {
@@ -141,34 +128,15 @@ public class CandlestickChartCanvas extends Canvas {
         render();
     }
 
-    public void setLastPrice(double price) { this.lastPrice = price; render(); }
-    public double getLastPrice() { return lastPrice; }
-
-    public void setAnalysisMode(boolean analysisMode) {
-        this.analysisMode = analysisMode;
+    public void setLastPrice(double price)     { this.lastPrice = price; render(); }
+    public double getLastPrice()               { return lastPrice; }
+    public void setShowVolume(boolean v)       { showVolume = v;    render(); }
+    public void setAnalysisMode(boolean v)     { analysisMode = v;  render(); }
+    public List<IndicatorDefinition> getIndicators() { return indicators; }
+    public void setIndicators(List<IndicatorDefinition> ind) {
+        this.indicators = ind != null ? ind : new ArrayList<>();
         render();
     }
-
-    public void setOverlaysEnabled(boolean enabled) {
-        showEma = showBollinger = showIchimoku = showSR = showMacd = showRsi = enabled;
-        render();
-    }
-
-    public void setShowEma(boolean v)       { showEma = v; render(); }
-    public void setShowBollinger(boolean v) { showBollinger = v; render(); }
-    public void setShowIchimoku(boolean v)  { showIchimoku = v; render(); }
-    public void setShowSR(boolean v)        { showSR = v; render(); }
-    public void setShowVolume(boolean v)    { showVolume = v; render(); }
-    public void setShowMacd(boolean v)      { showMacd = v; render(); }
-    public void setShowRsi(boolean v)       { showRsi = v; render(); }
-
-    public void toggleEma()       { showEma       = !showEma;       render(); }
-    public void toggleBollinger() { showBollinger = !showBollinger; render(); }
-    public void toggleIchimoku()  { showIchimoku  = !showIchimoku;  render(); }
-    public void toggleSR()        { showSR        = !showSR;        render(); }
-    public void toggleVolume()    { showVolume    = !showVolume;     render(); }
-    public void toggleMacd()      { showMacd      = !showMacd;       render(); }
-    public void toggleRsi()       { showRsi       = !showRsi;        render(); }
 
     // ── Main Render ───────────────────────────────────────────
 
@@ -182,119 +150,108 @@ public class CandlestickChartCanvas extends Canvas {
             return;
         }
 
-        // Clamp the visible window before slicing the backing list.
-        visibleBars = Math.max(1, Math.min(visibleBars, bars.size()));
-        startBarIndex = Math.max(0,
-                Math.min(startBarIndex, bars.size() - visibleBars));
-        int endBarIndex = Math.min(bars.size() - 1,
-                startBarIndex + visibleBars - 1);
+        // ── Clamp view window ──────────────────────────────────
+        visibleBars   = Math.max(1, Math.min(visibleBars, bars.size()));
+        startBarIndex = Math.max(0, Math.min(startBarIndex, bars.size() - visibleBars));
+        int endBarIndex = startBarIndex + visibleBars - 1;  // inclusive, absolute index
+
+        // Visible sub-list — used ONLY for drawing candles and volume
         List<OhlcvBar> visible = bars.subList(startBarIndex, endBarIndex + 1);
 
-        // Compute candle width
-        double plotW = w - PADDING_LEFT - PADDING_RIGHT;
-        candleWidth  = Math.max(2.0, plotW / visible.size() - 1.0);
+        // ── Layout ────────────────────────────────────────────
+        // Count sub-pane indicators
+        long subCount = subPaneCount();
+        double totalH = h - PADDING_TOP - PADDING_BOTTOM;
+        double subTotal  = Math.min(0.45, subCount * SUB_FRAC);
+        double volFrac   = showVolume ? VOL_FRAC : 0;
+        double priceFrac = 1.0 - subTotal - volFrac;
 
-        // Layout rectangles
-        double priceH  = h * (showMacd || showRsi
-                ? PRICE_AREA_HEIGHT_PCT : 0.80);
-        double volH    = showVolume ? h * VOLUME_AREA_HEIGHT_PCT : 0;
-        double macdH   = showMacd  ? h * MACD_AREA_HEIGHT_PCT   : 0;
-        double rsiH    = showRsi   ? h * RSI_AREA_HEIGHT_PCT     : 0;
+        double priceH = totalH * priceFrac;
+        double volH   = totalH * volFrac;
+
+        // Assign height to each sub-pane indicator
+        double subPaneH = subCount > 0 ? (totalH * subTotal / subCount) : 0;
 
         ChartLayout layout = new ChartLayout(
                 PADDING_LEFT, PADDING_TOP, w - PADDING_RIGHT, h - PADDING_BOTTOM,
-                priceH, volH, macdH, rsiH);
+                priceH, volH, subPaneH, subCount);
 
-        // Find price range for visible bars
-        double maxPrice = visible.stream()
-                .mapToDouble(b -> b.getHigh().doubleValue()).max().orElse(1);
-        double minPrice = visible.stream()
-                .mapToDouble(b -> b.getLow().doubleValue()).min().orElse(0);
+        // ── Price range ───────────────────────────────────────
+        double maxPrice = visible.stream().mapToDouble(b -> b.getHigh().doubleValue()).max().orElse(1);
+        double minPrice = visible.stream().mapToDouble(b -> b.getLow().doubleValue()).min().orElse(0);
 
-        // Extend range for indicator lines
-        if (showBollinger && indicators != null) {
-            if (!indicators.getBbUpperSeries().isEmpty()) {
-                maxPrice = Math.max(maxPrice, getVisibleMax(
-                        indicators.getBbUpperSeries(), startBarIndex, endBarIndex));
-            }
-            if (!indicators.getBbLowerSeries().isEmpty()) {
-                minPrice = Math.min(minPrice, getVisibleMin(
-                        indicators.getBbLowerSeries(), startBarIndex, endBarIndex));
+        // Extend price range for price-pane indicator series
+        for (IndicatorDefinition def : indicators) {
+            if (!def.isVisible() || def.getPane() != DisplayPane.PRICE) continue;
+            extendPriceRange(def, startBarIndex, endBarIndex);
+        }
+        // Extend for the indicator's own range
+        for (IndicatorDefinition def : indicators) {
+            if (!def.isVisible() || def.getPane() != DisplayPane.PRICE) continue;
+            maxPrice = Math.max(maxPrice, visibleMax(def.getSeries(), startBarIndex, endBarIndex));
+            minPrice = Math.min(minPrice, visibleMin(def.getSeries(), startBarIndex, endBarIndex));
+            // Also check extra series (e.g. Bollinger upper)
+            for (List<Double> extra : def.getExtraSeries().values()) {
+                maxPrice = Math.max(maxPrice, visibleMax(extra, startBarIndex, endBarIndex));
+                minPrice = Math.min(minPrice, visibleMin(extra, startBarIndex, endBarIndex));
             }
         }
+        double pad = (maxPrice - minPrice) * 0.05;
+        maxPrice += pad;
+        minPrice -= pad;
+        if (maxPrice == minPrice) { maxPrice += 1; minPrice -= 1; }
 
-        double pricePad = (maxPrice - minPrice) * 0.05;
-        maxPrice += pricePad;
-        minPrice -= pricePad;
+        double maxVol = visible.stream().mapToDouble(b -> b.getVolume().doubleValue()).max().orElse(1);
 
-        // Max volume
-        double maxVolume = visible.stream()
-                .mapToDouble(b -> b.getVolume().doubleValue()).max().orElse(1);
+        // ── Draw ──────────────────────────────────────────────
 
-        // ══ DRAW ══════════════════════════════════════════════
-
-        // 1. Background
         gc.setFill(BG);
         gc.fillRect(0, 0, w, h);
 
-        // 2. Grid
-        drawGrid(gc, layout, maxPrice, minPrice, visible.size());
+        drawGrid(gc, layout, maxPrice, minPrice, visibleBars);
 
-        // 3. Indicator overlays (chart + analysis views)
-        if (showIchimoku && indicators != null)
-            drawIchimokuCloud(gc, layout, maxPrice, minPrice,
-                    startBarIndex, endBarIndex, visible.size());
+        // Price-pane indicators (fills first, then lines)
+        drawPricePaneIndicatorFills(gc, layout, maxPrice, minPrice, startBarIndex, endBarIndex, visibleBars);
+        drawPricePaneIndicatorLines(gc, layout, maxPrice, minPrice, startBarIndex, endBarIndex, visibleBars);
 
-        if (showBollinger && indicators != null)
-            drawBollingerFill(gc, layout, maxPrice, minPrice,
-                    startBarIndex, endBarIndex, visible.size());
+        // Support / Resistance
+        if (srResult != null) {
+            IndicatorDefinition srDef = indicators.stream()
+                    .filter(d -> d.getType() == IndicatorDefinition.Type.SUPPORT_RESISTANCE && d.isVisible())
+                    .findFirst().orElse(null);
+            if (srDef != null) drawSupportResistance(gc, layout, maxPrice, minPrice);
+        }
 
-        if (showSR && srResult != null)
-            drawSupportResistance(gc, layout, maxPrice, minPrice, w);
+        // Candles
+        drawCandles(gc, layout, visible, maxPrice, minPrice);
 
-        if (showEma && indicators != null)
-            drawEmaLines(gc, layout, maxPrice, minPrice,
-                    startBarIndex, endBarIndex, visible.size());
-
-        if (showBollinger && indicators != null)
-            drawBollingerLines(gc, layout, maxPrice, minPrice,
-                    startBarIndex, endBarIndex, visible.size());
-
-        if (showIchimoku && indicators != null)
-            drawIchimokuLines(gc, layout, maxPrice, minPrice,
-                    startBarIndex, endBarIndex, visible.size());
-
-        // 9. Candles
-        drawCandles(gc, layout, visible, maxPrice, minPrice, startBarIndex);
-
-        // 9b. Last price — dotted red line from last candle close
+        // Last price line
         drawLastPriceLine(gc, layout, maxPrice, minPrice, visible);
 
-        // 10. Volume bars
-        if (showVolume)
-            drawVolume(gc, layout, visible, maxVolume);
+        // Volume
+        if (showVolume) drawVolume(gc, layout, visible, maxVol);
 
-        if (showMacd && indicators != null)
-            drawMacd(gc, layout, startBarIndex, endBarIndex, visible.size());
+        // Sub-pane indicators
+        drawSubPaneIndicators(gc, layout, startBarIndex, endBarIndex, visibleBars);
 
-        if (showRsi && indicators != null)
-            drawRsi(gc, layout, startBarIndex, endBarIndex, visible.size());
-
-        // 13. Price axis labels
+        // Axes + separators
         drawPriceAxis(gc, layout, maxPrice, minPrice);
-
-        // 14. Time axis labels
         drawTimeAxis(gc, layout, visible, w);
-
-        // 15. Separator lines
         drawSeparators(gc, layout, w);
 
-        // 16. Crosshair + tooltip
-        if (showCrosshair)
-            drawCrosshair(gc, layout, visible, maxPrice, minPrice, w);
-
-        // 17. Legend
+        // Legend
         drawLegend(gc, layout);
+
+        // Crosshair
+        if (showCrosshair) drawCrosshair(gc, layout, visible, maxPrice, minPrice);
+    }
+
+    // ── Count sub-pane indicators ─────────────────────────────
+
+    private long subPaneCount() {
+        return indicators.stream()
+                .filter(d -> d.isVisible() && d.getPane() == DisplayPane.SUB)
+                .count();
     }
 
     // ── Draw: Grid ────────────────────────────────────────────
@@ -305,13 +262,13 @@ public class CandlestickChartCanvas extends Canvas {
         gc.setLineWidth(0.5);
         int gridLines = 6;
         for (int i = 0; i <= gridLines; i++) {
-            double y = l.priceTop() + (l.priceHeight * i / gridLines);
+            double y = l.priceTop() + l.priceH * i / gridLines;
             gc.strokeLine(l.left, y, l.right, y);
         }
-        // Vertical grid every N bars
         int step = Math.max(1, barCount / 8);
+        double barW = l.plotWidth() / barCount;
         for (int i = 0; i < barCount; i += step) {
-            double x = l.left + (i + 0.5) * (l.plotWidth() / barCount);
+            double x = l.left + (i + 0.5) * barW;
             gc.strokeLine(x, l.priceTop(), x, l.priceBottom());
         }
     }
@@ -319,54 +276,44 @@ public class CandlestickChartCanvas extends Canvas {
     // ── Draw: Candles ─────────────────────────────────────────
 
     private void drawCandles(GraphicsContext gc, ChartLayout l,
-                             List<OhlcvBar> bars, double maxP, double minP,
-                             int startIdx) {
-        int n = bars.size();
-        double barW = l.plotWidth() / n;
+                             List<OhlcvBar> visible, double maxP, double minP) {
+        int n    = visible.size();
+        double barW  = l.plotWidth() / n;
         double bodyW = Math.max(1.5, barW * 0.65);
-        double wickW = Math.max(1.0, bodyW * 0.2);
+        double wickW = Math.max(1.0, bodyW * 0.25);
 
         for (int i = 0; i < n; i++) {
-            OhlcvBar bar = bars.get(i);
-            double o = bar.getOpen().doubleValue();
-            double h = bar.getHigh().doubleValue();
+            OhlcvBar bar = visible.get(i);
+            double o  = bar.getOpen().doubleValue();
+            double hi = bar.getHigh().doubleValue();
             double lo = bar.getLow().doubleValue();
-            double c = bar.getClose().doubleValue();
+            double c  = bar.getClose().doubleValue();
             boolean bull = c >= o;
 
-            double cx = l.left + (i + 0.5) * barW;
-            double topWick    = priceToY(h,  maxP, minP, l);
-            double bottomWick = priceToY(lo, maxP, minP, l);
-            double bodyTop    = priceToY(Math.max(o,c), maxP, minP, l);
-            double bodyBot    = priceToY(Math.min(o,c), maxP, minP, l);
-            double bodyH      = Math.max(1.5, bodyBot - bodyTop);
+            double cx       = l.left + (i + 0.5) * barW;
+            double topWick  = priceToY(hi, maxP, minP, l);
+            double botWick  = priceToY(lo, maxP, minP, l);
+            double bodyTop  = priceToY(Math.max(o, c), maxP, minP, l);
+            double bodyBot  = priceToY(Math.min(o, c), maxP, minP, l);
+            double bodyH    = Math.max(1.5, bodyBot - bodyTop);
 
-            // Wick
             gc.setStroke(bull ? BULL_WICK : BEAR_WICK);
             gc.setLineWidth(wickW);
-            gc.strokeLine(cx, topWick, cx, bottomWick);
+            gc.strokeLine(cx, topWick, cx, botWick);
 
-            // Body
             gc.setFill(bull ? BULL_BODY : BEAR_BODY);
-            gc.fillRect(cx - bodyW/2, bodyTop, bodyW, bodyH);
-
-            // Outline for doji candles (open ≈ close)
-            if (bodyH <= 2) {
-                gc.setStroke(bull ? BULL_BODY : BEAR_BODY);
-                gc.setLineWidth(1);
-                gc.strokeLine(cx - bodyW/2, bodyTop, cx + bodyW/2, bodyTop);
-            }
+            gc.fillRect(cx - bodyW / 2, bodyTop, bodyW, bodyH);
         }
     }
 
-    /** Dotted red horizontal line at last traded / close price. */
+    /** Dotted red horizontal line at last price. */
     private void drawLastPriceLine(GraphicsContext gc, ChartLayout l,
                                    double maxP, double minP, List<OhlcvBar> visible) {
         double price = lastPrice;
         if (Double.isNaN(price) && visible != null && !visible.isEmpty()) {
-            price = visible.getLast().getClose().doubleValue();
+            price = visible.get(visible.size() - 1).getClose().doubleValue();
         }
-        if (Double.isNaN(price)) return;
+        if (Double.isNaN(price) || price < minP || price > maxP) return;
 
         double y = priceToY(price, maxP, minP, l);
         gc.setStroke(Color.web("#f85149"));
@@ -377,180 +324,205 @@ public class CandlestickChartCanvas extends Canvas {
 
         gc.setFill(Color.web("#f85149"));
         gc.setFont(FONT_SMALL);
-        gc.setTextAlign(TextAlignment.RIGHT);
-        gc.fillText(String.format("%.4f", price), l.right + 72, y + 4);
+        gc.setTextAlign(TextAlignment.LEFT);
+        gc.fillText(fmtPrice(price), l.right + 4, y + 4);
     }
 
     // ── Draw: Volume ──────────────────────────────────────────
 
     private void drawVolume(GraphicsContext gc, ChartLayout l,
-                            List<OhlcvBar> bars, double maxVol) {
-        if (l.volHeight <= 0) return;
-        int n = bars.size();
-        double barW = l.plotWidth() / n;
+                            List<OhlcvBar> visible, double maxVol) {
+        if (l.volH <= 0) return;
+        int n    = visible.size();
+        double barW    = l.plotWidth() / n;
         double volBarW = Math.max(1.5, barW * 0.7);
+        double volTop  = l.volTop();
 
         for (int i = 0; i < n; i++) {
-            OhlcvBar bar = bars.get(i);
+            OhlcvBar bar = visible.get(i);
             double vol  = bar.getVolume().doubleValue();
             boolean bull = bar.getClose().compareTo(bar.getOpen()) >= 0;
-            double barH = (vol / maxVol) * l.volHeight;
-            double x = l.left + (i + 0.5) * barW - volBarW / 2;
-            double y = l.volTop() + l.volHeight - barH;
+            double barH = (vol / maxVol) * l.volH;
+            double x    = l.left + (i + 0.5) * barW - volBarW / 2;
+            double y    = volTop + l.volH - barH;
             gc.setFill(bull ? VOL_BULL : VOL_BEAR);
             gc.fillRect(x, y, volBarW, barH);
         }
     }
 
-    // ── Draw: EMA Lines ───────────────────────────────────────
+    // ── Draw: Price-pane indicator fills ─────────────────────
+    // (Must be drawn before candles so candles appear on top)
 
-    private void drawEmaLines(GraphicsContext gc, ChartLayout l,
-                              double maxP, double minP,
-                              int start, int end, int n) {
-        if (indicators.getEmaFastSeries() != null)
-            drawLineSeries(gc, l, indicators.getEmaFastSeries(),
-                    start, end, n, maxP, minP, EMA_FAST, 1.5);
-        if (indicators.getEmaSlowSeries() != null)
-            drawLineSeries(gc, l, indicators.getEmaSlowSeries(),
-                    start, end, n, maxP, minP, EMA_SLOW, 1.5);
-        if (indicators.getEma50Series() != null)
-            drawLineSeries(gc, l, indicators.getEma50Series(),
-                    start, end, n, maxP, minP, EMA_50, 1.0);
-        if (indicators.getEma200Series() != null)
-            drawLineSeries(gc, l, indicators.getEma200Series(),
-                    start, end, n, maxP, minP, EMA_200, 1.0);
+    private void drawPricePaneIndicatorFills(GraphicsContext gc, ChartLayout l,
+                                             double maxP, double minP,
+                                             int start, int end, int n) {
+        for (IndicatorDefinition def : indicators) {
+            if (!def.isVisible() || def.getPane() != DisplayPane.PRICE) continue;
+            Color c = Color.web(def.getColor());
+
+            switch (def.getType()) {
+                case BOLLINGER -> drawBandFill(gc, l, def.getExtraSeries("upper"),
+                        def.getExtraSeries("lower"), maxP, minP, start, n,
+                        Color.color(c.getRed(), c.getGreen(), c.getBlue(), 0.08));
+                case KELTNER   -> drawBandFill(gc, l, def.getExtraSeries("upper"),
+                        def.getExtraSeries("lower"), maxP, minP, start, n,
+                        Color.color(c.getRed(), c.getGreen(), c.getBlue(), 0.07));
+                case DONCHIAN  -> drawBandFill(gc, l, def.getExtraSeries("upper"),
+                        def.getExtraSeries("lower"), maxP, minP, start, n,
+                        Color.color(c.getRed(), c.getGreen(), c.getBlue(), 0.07));
+                case ICHIMOKU  -> drawIchimokuCloud(gc, l, def, maxP, minP, start, n);
+                default        -> {} // no fill
+            }
+        }
     }
 
-    // ── Draw: Bollinger Bands ─────────────────────────────────
-
-    private void drawBollingerFill(GraphicsContext gc, ChartLayout l,
-                                   double maxP, double minP,
-                                   int start, int end, int n) {
-        List<Double> upper = indicators.getBbUpperSeries();
-        List<Double> lower = indicators.getBbLowerSeries();
-        if (upper == null || lower == null || upper.size() < end) return;
-
+    private void drawBandFill(GraphicsContext gc, ChartLayout l,
+                              List<Double> upper, List<Double> lower,
+                              double maxP, double minP, int start, int n, Color fill) {
+        if (upper == null || lower == null || upper.isEmpty() || lower.isEmpty()) return;
         double barW = l.plotWidth() / n;
-        gc.setFill(BB_FILL);
+        gc.setFill(fill);
         gc.beginPath();
         boolean started = false;
         for (int i = 0; i < n; i++) {
             int idx = start + i;
             if (idx >= upper.size()) break;
+            double v = upper.get(idx);
+            if (Double.isNaN(v)) { started = false; continue; }
             double x = l.left + (i + 0.5) * barW;
-            double y = priceToY(upper.get(idx), maxP, minP, l);
+            double y = priceToY(v, maxP, minP, l);
             if (!started) { gc.moveTo(x, y); started = true; }
             else gc.lineTo(x, y);
         }
         for (int i = n - 1; i >= 0; i--) {
             int idx = start + i;
             if (idx >= lower.size()) continue;
+            double v = lower.get(idx);
+            if (Double.isNaN(v)) continue;
             double x = l.left + (i + 0.5) * barW;
-            double y = priceToY(lower.get(idx), maxP, minP, l);
+            double y = priceToY(v, maxP, minP, l);
             gc.lineTo(x, y);
         }
         gc.closePath();
         gc.fill();
     }
 
-    private void drawBollingerLines(GraphicsContext gc, ChartLayout l,
-                                    double maxP, double minP,
-                                    int start, int end, int n) {
-        drawLineSeries(gc, l, indicators.getBbUpperSeries(),
-                start, end, n, maxP, minP, BB_UPPER, 1.0);
-        drawLineSeries(gc, l, indicators.getBbMiddleSeries(),
-                start, end, n, maxP, minP, Color.web("#388bfd55"), 0.8);
-        drawLineSeries(gc, l, indicators.getBbLowerSeries(),
-                start, end, n, maxP, minP, BB_LOWER, 1.0);
-    }
-
-    // ── Draw: Ichimoku Cloud ──────────────────────────────────
-
     private void drawIchimokuCloud(GraphicsContext gc, ChartLayout l,
-                                   double maxP, double minP,
-                                   int start, int end, int n) {
-        IchimokuResult ich = indicators.getIchimoku();
-        if (ich == null) return;
-
-        List<Double> spanA = ich.getSpanASeries();
-        List<Double> spanB = ich.getSpanBSeries();
+                                   IndicatorDefinition def,
+                                   double maxP, double minP, int start, int n) {
+        List<Double> spanA = def.getExtraSeries("spanA");
+        List<Double> spanB = def.getExtraSeries("spanB");
         if (spanA == null || spanB == null) return;
-
         double barW = l.plotWidth() / n;
-
-        // Draw cloud fill (bull = green, bear = red)
         for (int i = 0; i < n - 1; i++) {
             int idx = start + i;
             if (idx >= spanA.size() || idx >= spanB.size()) break;
-
-            double aVal = spanA.get(idx);
-            double bVal = spanB.get(idx);
-            boolean bullCloud = aVal >= bVal;
-
+            double a = spanA.get(idx), b = spanB.get(idx);
+            if (Double.isNaN(a) || Double.isNaN(b)) continue;
+            boolean bull = a >= b;
             double x1 = l.left + (i + 0.5) * barW;
             double x2 = l.left + (i + 1.5) * barW;
-            double ay1 = priceToY(aVal, maxP, minP, l);
-            double by1 = priceToY(bVal, maxP, minP, l);
-
-            double cloudTop    = Math.min(ay1, by1);
-            double cloudBottom = Math.max(ay1, by1);
-
-            gc.setFill(bullCloud ? ICH_BULL : ICH_BEAR);
-            gc.fillRect(x1, cloudTop, x2 - x1, cloudBottom - cloudTop);
+            double y1 = priceToY(a, maxP, minP, l);
+            double y2 = priceToY(b, maxP, minP, l);
+            gc.setFill(bull ? ICH_BULL : ICH_BEAR);
+            gc.fillRect(x1, Math.min(y1, y2), x2 - x1, Math.abs(y2 - y1));
         }
-
-        // Tenkan-sen and Kijun-sen lines
-        drawLineSeries(gc, l, ich.getTenkanSeries(),
-                start, end, n, maxP, minP, ICH_TENKAN, 1.5);
-        drawLineSeries(gc, l, ich.getKijunSeries(),
-                start, end, n, maxP, minP, ICH_KIJUN, 1.5);
     }
 
-    private void drawIchimokuLines(GraphicsContext gc, ChartLayout l,
-                                   double maxP, double minP,
-                                   int start, int end, int n) {
-        // Already drawn in drawIchimokuCloud for Tenkan/Kijun
-        // Span A and B borders
-        IchimokuResult ich = indicators.getIchimoku();
-        if (ich == null) return;
-        drawLineSeries(gc, l, ich.getSpanASeries(),
-                start, end, n, maxP, minP, Color.web("#3fb95088"), 1.0);
-        drawLineSeries(gc, l, ich.getSpanBSeries(),
-                start, end, n, maxP, minP, Color.web("#f8514988"), 1.0);
+    // ── Draw: Price-pane indicator lines ─────────────────────
+
+    private void drawPricePaneIndicatorLines(GraphicsContext gc, ChartLayout l,
+                                             double maxP, double minP,
+                                             int start, int end, int n) {
+        for (IndicatorDefinition def : indicators) {
+            if (!def.isVisible() || def.getPane() != DisplayPane.PRICE) continue;
+            Color c   = Color.web(def.getColor());
+            double lw = def.getLineWeight();
+
+            switch (def.getType()) {
+                // Single-line MA overlays
+                case EMA, SMA, WMA, DEMA, TEMA, HULL_MA, KAMA, ZLEMA, VWAP ->
+                        drawLineSeriesAbsolute(gc, l, def.getSeries(), start, n, maxP, minP, c, lw);
+
+                // Bollinger: upper, middle (dashed), lower
+                case BOLLINGER -> {
+                    drawLineSeriesAbsolute(gc, l, def.getExtraSeries("upper"), start, n, maxP, minP, c, lw);
+                    drawLineSeriesAbsolute(gc, l, def.getSeries(), start, n, maxP, minP,
+                            Color.color(c.getRed(), c.getGreen(), c.getBlue(), 0.5), lw * 0.7);
+                    drawLineSeriesAbsolute(gc, l, def.getExtraSeries("lower"), start, n, maxP, minP, c, lw);
+                }
+                // Keltner / Donchian: same as Bollinger
+                case KELTNER, DONCHIAN -> {
+                    drawLineSeriesAbsolute(gc, l, def.getExtraSeries("upper"), start, n, maxP, minP, c, lw);
+                    drawLineSeriesAbsolute(gc, l, def.getSeries(),             start, n, maxP, minP,
+                            Color.color(c.getRed(), c.getGreen(), c.getBlue(), 0.5), lw * 0.7);
+                    drawLineSeriesAbsolute(gc, l, def.getExtraSeries("lower"), start, n, maxP, minP, c, lw);
+                }
+                // Ichimoku lines: tenkan, kijun, spanA, spanB
+                case ICHIMOKU -> {
+                    drawLineSeriesAbsolute(gc, l, def.getSeries(),                  start, n, maxP, minP,
+                            Color.web("#f85149"), lw);          // tenkan
+                    drawLineSeriesAbsolute(gc, l, def.getExtraSeries("kijun"), start, n, maxP, minP,
+                            Color.web("#388bfd"), lw);          // kijun
+                    drawLineSeriesAbsolute(gc, l, def.getExtraSeries("spanA"), start, n, maxP, minP,
+                            Color.web("#3fb95088"), 0.8);       // span A border
+                    drawLineSeriesAbsolute(gc, l, def.getExtraSeries("spanB"), start, n, maxP, minP,
+                            Color.web("#f8514988"), 0.8);       // span B border
+                }
+                // Parabolic SAR — drawn as dots
+                case PARABOLIC_SAR -> drawSarDots(gc, l, def, start, n, maxP, minP);
+
+                default -> {} // handled elsewhere
+            }
+        }
+    }
+
+    /** Draws SAR as small circles at each bar position. */
+    private void drawSarDots(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                             int start, int n, double maxP, double minP) {
+        List<Double> series = def.getSeries();
+        if (series == null || series.isEmpty()) return;
+        double barW = l.plotWidth() / n;
+        double r    = Math.max(2.0, def.getLineWeight() + 1.0);
+        gc.setFill(Color.web(def.getColor()));
+        for (int i = 0; i < n; i++) {
+            int idx = start + i;
+            if (idx >= series.size()) break;
+            double v = series.get(idx);
+            if (Double.isNaN(v)) continue;
+            double x = l.left + (i + 0.5) * barW;
+            double y = priceToY(v, maxP, minP, l);
+            gc.fillOval(x - r / 2, y - r / 2, r, r);
+        }
     }
 
     // ── Draw: Support & Resistance ────────────────────────────
 
     private void drawSupportResistance(GraphicsContext gc, ChartLayout l,
-                                       double maxP, double minP, double w) {
-        // Supports
+                                       double maxP, double minP) {
         for (SRLevel sr : srResult.getSupports()) {
             double price = sr.price();
             if (price < minP || price > maxP) continue;
             double y = priceToY(price, maxP, minP, l);
-            gc.setStroke(colorForSr(sr));
+            gc.setStroke(SR_SUP);
             gc.setLineWidth(1.0);
             gc.setLineDashes(6, 4);
             gc.strokeLine(l.left, y, l.right, y);
-            gc.setLineDashes(null);
-
+            gc.setLineDashes();
             gc.setFill(SR_SUP);
             gc.setFont(FONT_SMALL);
             gc.setTextAlign(TextAlignment.RIGHT);
             gc.fillText(sr.label() + " " + fmtPrice(price), l.right - 2, y - 2);
         }
-
-        // Resistances
         for (SRLevel sr : srResult.getResistances()) {
             double price = sr.price();
             if (price < minP || price > maxP) continue;
             double y = priceToY(price, maxP, minP, l);
-            gc.setStroke(colorForSr(sr));
+            gc.setStroke(SR_RES);
             gc.setLineWidth(1.0);
             gc.setLineDashes(6, 4);
             gc.strokeLine(l.left, y, l.right, y);
-            gc.setLineDashes(null);
-
+            gc.setLineDashes();
             gc.setFill(SR_RES);
             gc.setFont(FONT_SMALL);
             gc.setTextAlign(TextAlignment.RIGHT);
@@ -558,121 +530,195 @@ public class CandlestickChartCanvas extends Canvas {
         }
     }
 
-    // ── Draw: MACD Sub-Chart ─────────────────────────────────
+    // ── Draw: Sub-pane indicators ─────────────────────────────
 
-    private void drawMacd(GraphicsContext gc, ChartLayout l,
-                          int start, int end, int n) {
-        if (l.macdHeight <= 0) return;
-        List<Double> macdLine = indicators.getMacdLineSeries();
-        List<Double> sigLine  = indicators.getMacdSignalSeries();
-        List<Double> hist     = indicators.getMacdHistogramSeries();
-        if (macdLine == null || hist == null) return;
+    private void drawSubPaneIndicators(GraphicsContext gc, ChartLayout l,
+                                       int start, int end, int n) {
+        int paneIdx = 0;
+        for (IndicatorDefinition def : indicators) {
+            if (!def.isVisible() || def.getPane() != DisplayPane.SUB) continue;
+            double paneTop = l.subPaneTop(paneIdx);
+            double paneH   = l.subPaneH;
 
-        // Background
-        gc.setFill(Color.web("#161b22"));
-        gc.fillRect(l.left, l.macdTop(), l.plotWidth(), l.macdHeight);
+            // Background
+            gc.setFill(Color.web("#0d1117"));
+            gc.fillRect(l.left, paneTop, l.plotWidth(), paneH);
 
-        // MACD label
-        gc.setFill(TEXT_DIM);
-        gc.setFont(FONT_SMALL);
-        gc.setTextAlign(TextAlignment.LEFT);
-        gc.fillText("MACD", l.left + 4, l.macdTop() + 12);
+            // Draw specific sub-pane type
+            drawSubPane(gc, l, def, paneTop, paneH, start, end, n);
 
-        // Find range
-        double maxM = 0, minM = 0;
-        for (int i = start; i <= end && i < hist.size(); i++) {
-            if (!Double.isNaN(hist.get(i))) {
-                maxM = Math.max(maxM, hist.get(i));
-                minM = Math.min(minM, hist.get(i));
-            }
+            paneIdx++;
         }
-        double rangeM = Math.max(Math.abs(maxM - minM), 0.0001);
-        double zeroY  = l.macdTop() + l.macdHeight * (maxM / rangeM);
-
-        double barW = l.plotWidth() / n;
-
-        // Histogram bars
-        for (int i = 0; i < n; i++) {
-            int idx = start + i;
-            if (idx >= hist.size()) break;
-            double val = hist.get(idx);
-            if (Double.isNaN(val)) continue;
-            double x  = l.left + i * barW;
-            double y  = l.macdTop() + l.macdHeight * ((maxM - val) / rangeM);
-            double bh = Math.abs(y - zeroY);
-            gc.setFill(val >= 0 ? Color.web("#3fb95099") : Color.web("#f8514999"));
-            gc.fillRect(x, Math.min(y, zeroY), barW * 0.8, Math.max(1, bh));
-        }
-
-        // MACD and signal lines
-        drawSubLineSeries(gc, macdLine, start, end, n, maxM, minM, l.macdTop(),
-                l.macdHeight, Color.web("#388bfd"), 1.5);
-        if (sigLine != null)
-            drawSubLineSeries(gc, sigLine, start, end, n, maxM, minM, l.macdTop(),
-                    l.macdHeight, Color.web("#f85149"), 1.0);
     }
 
-    // ── Draw: RSI Sub-Chart ───────────────────────────────────
-
-    private void drawRsi(GraphicsContext gc, ChartLayout l,
-                         int start, int end, int n) {
-        if (l.rsiHeight <= 0) return;
-        List<Double> rsiSeries = indicators.getRsiSeries();
-        if (rsiSeries == null) return;
-
-        // Background
-        gc.setFill(Color.web("#161b22"));
-        gc.fillRect(l.left, l.rsiTop(), l.plotWidth(), l.rsiHeight);
-
-        // Label
+    private void drawSubPane(GraphicsContext gc, ChartLayout l,
+                             IndicatorDefinition def,
+                             double paneTop, double paneH,
+                             int start, int end, int n) {
+        Color c = Color.web(def.getColor());
         gc.setFill(TEXT_DIM);
         gc.setFont(FONT_SMALL);
         gc.setTextAlign(TextAlignment.LEFT);
-        gc.fillText("RSI(14)", l.left + 4, l.rsiTop() + 12);
+        gc.fillText(def.getLabel(), l.left + 4, paneTop + 12);
 
+        switch (def.getType()) {
+            case MACD, PPO  -> drawMacdPane(gc, l, def, paneTop, paneH, start, end, n, c);
+            case RSI        -> drawRsiPane(gc, l, def, paneTop, paneH, start, end, n, c, 30, 70);
+            case STOCHASTIC -> drawOscillatorPane(gc, l, def, paneTop, paneH, start, end, n, c, "d", 20, 80);
+            case STOCH_RSI  -> drawOscillatorPane(gc, l, def, paneTop, paneH, start, end, n, c, "d", 20, 80);
+            case WILLIAMS_R -> drawBoundedPane(gc, l, def, paneTop, paneH, start, end, n, c, -100, 0, -80, -20);
+            case CCI        -> drawUnboundedOscPane(gc, l, def, paneTop, paneH, start, end, n, c);
+            case ADX        -> drawAdxPane(gc, l, def, paneTop, paneH, start, end, n, c);
+            case AROON      -> drawAroonPane(gc, l, def, paneTop, paneH, start, end, n, c);
+            default         -> drawGenericSubPane(gc, l, def, paneTop, paneH, start, end, n, c);
+        }
+    }
+
+    /** MACD with histogram and signal line. */
+    private void drawMacdPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                              double paneTop, double paneH,
+                              int start, int end, int n, Color c) {
+        List<Double> macdLine = def.getSeries();
+        List<Double> sigLine  = def.getExtraSeries("signal");
+        List<Double> hist     = def.getExtraSeries("histogram");
+        if (macdLine == null) return;
+
+        List<Double> allVals = new ArrayList<>();
+        if (hist != null) allVals.addAll(hist.subList(start, Math.min(end + 1, hist.size())));
+        else              allVals.addAll(macdLine.subList(start, Math.min(end + 1, macdLine.size())));
+        double maxM = allVals.stream().filter(v -> !Double.isNaN(v)).mapToDouble(d -> d).max().orElse(1);
+        double minM = allVals.stream().filter(v -> !Double.isNaN(v)).mapToDouble(d -> d).min().orElse(-1);
+        if (maxM == minM) { maxM += 1; minM -= 1; }
+
+        double barW  = l.plotWidth() / n;
+        double zeroY = subY(0, maxM, minM, paneTop, paneH);
+
+        if (hist != null) {
+            for (int i = 0; i < n; i++) {
+                int idx = start + i;
+                if (idx >= hist.size()) break;
+                double v = hist.get(idx);
+                if (Double.isNaN(v)) continue;
+                double x  = l.left + i * barW;
+                double y  = subY(v, maxM, minM, paneTop, paneH);
+                double bh = Math.abs(y - zeroY);
+                gc.setFill(v >= 0 ? Color.web("#3fb95088") : Color.web("#f8514988"));
+                gc.fillRect(x, Math.min(y, zeroY), barW * 0.85, Math.max(1, bh));
+            }
+        }
+
+        drawSubLine(gc, l, macdLine, start, n, maxM, minM, paneTop, paneH, c, def.getLineWeight());
+        if (sigLine != null)
+            drawSubLine(gc, l, sigLine, start, n, maxM, minM, paneTop, paneH,
+                    Color.web("#f85149"), 1.0);
+    }
+
+    /** RSI with overbought/oversold zones. */
+    private void drawRsiPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                             double paneTop, double paneH,
+                             int start, int end, int n, Color c,
+                             double oversold, double overbought) {
+        List<Double> series = def.getSeries();
+        if (series == null) return;
         double maxR = 100, minR = 0;
-
-        // Overbought/Oversold zones
-        double y70 = subY(70, maxR, minR, l.rsiTop(), l.rsiHeight);
-        double y30 = subY(30, maxR, minR, l.rsiTop(), l.rsiHeight);
+        double y70 = subY(overbought, maxR, minR, paneTop, paneH);
+        double y30 = subY(oversold,   maxR, minR, paneTop, paneH);
         gc.setFill(Color.web("#f8514912"));
-        gc.fillRect(l.left, l.rsiTop(), l.plotWidth(), y70 - l.rsiTop());
+        gc.fillRect(l.left, paneTop, l.plotWidth(), y70 - paneTop);
         gc.setFill(Color.web("#3fb95012"));
-        gc.fillRect(l.left, y30, l.plotWidth(), l.rsiTop() + l.rsiHeight - y30);
-
-        // Reference lines at 70 and 30
-        gc.setStroke(Color.web("#f8514966"));
-        gc.setLineWidth(0.8);
+        gc.fillRect(l.left, y30, l.plotWidth(), paneTop + paneH - y30);
+        gc.setStroke(Color.web("#f8514966")); gc.setLineWidth(0.8);
         gc.setLineDashes(4, 4);
         gc.strokeLine(l.left, y70, l.right, y70);
         gc.setStroke(Color.web("#3fb95066"));
         gc.strokeLine(l.left, y30, l.right, y30);
-        gc.setLineDashes(null);
-
-        // RSI line
-        drawSubLineSeries(gc, rsiSeries, start, end, n, maxR, minR, l.rsiTop(),
-                l.rsiHeight, Color.web("#bc8cff"), 1.5);
-
-        // Current RSI value label
-        double lastRsi = Double.NaN;
-        for (int i = end; i >= start; i--) {
-            if (i < rsiSeries.size() && !Double.isNaN(rsiSeries.get(i))) {
-                lastRsi = rsiSeries.get(i); break;
-            }
-        }
-        if (!Double.isNaN(lastRsi)) {
-            gc.setFill(Color.web("#bc8cff"));
-            gc.setFont(FONT_SMALL);
-            gc.setTextAlign(TextAlignment.RIGHT);
-            gc.fillText(String.format("%.1f", lastRsi), l.right - 2,
-                    l.rsiTop() + 12);
-        }
+        gc.setLineDashes();
+        drawSubLine(gc, l, series, start, n, maxR, minR, paneTop, paneH, c, def.getLineWeight());
     }
 
-    // ── Draw: Price Axis ─────────────────────────────────────
+    /** Stochastic / StochRSI with %D line. */
+    private void drawOscillatorPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                                    double paneTop, double paneH,
+                                    int start, int end, int n, Color c,
+                                    String dKey, double lo, double hi) {
+        drawRsiPane(gc, l, def, paneTop, paneH, start, end, n, c, lo, hi);
+        List<Double> dLine = def.getExtraSeries(dKey);
+        if (dLine != null)
+            drawSubLine(gc, l, dLine, start, n, 100, 0, paneTop, paneH,
+                    Color.web("#e3b341"), 1.0);
+    }
 
-    private void drawPriceAxis(GraphicsContext gc, ChartLayout l,
-                               double maxP, double minP) {
+    /** Bounded oscillator like Williams %R (fixed range). */
+    private void drawBoundedPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                                 double paneTop, double paneH,
+                                 int start, int end, int n, Color c,
+                                 double minV, double maxV, double loLine, double hiLine) {
+        double yHi = subY(hiLine, maxV, minV, paneTop, paneH);
+        double yLo = subY(loLine, maxV, minV, paneTop, paneH);
+        gc.setStroke(Color.web("#f8514966")); gc.setLineWidth(0.8);
+        gc.setLineDashes(4, 4);
+        gc.strokeLine(l.left, yHi, l.right, yHi);
+        gc.setStroke(Color.web("#3fb95066"));
+        gc.strokeLine(l.left, yLo, l.right, yLo);
+        gc.setLineDashes();
+        drawSubLine(gc, l, def.getSeries(), start, n, maxV, minV, paneTop, paneH, c, def.getLineWeight());
+    }
+
+    /** CCI / CMO / general unbounded oscillator. */
+    private void drawUnboundedOscPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                                      double paneTop, double paneH,
+                                      int start, int end, int n, Color c) {
+        List<Double> series = def.getSeries();
+        if (series == null || series.isEmpty()) return;
+        double maxV = Double.NEGATIVE_INFINITY, minV = Double.POSITIVE_INFINITY;
+        for (int i = start; i <= end && i < series.size(); i++) {
+            double v = series.get(i);
+            if (!Double.isNaN(v)) { maxV = Math.max(maxV, v); minV = Math.min(minV, v); }
+        }
+        if (maxV == Double.NEGATIVE_INFINITY) return;
+        double pad = Math.abs(maxV - minV) * 0.05 + 0.01;
+        maxV += pad; minV -= pad;
+
+        // Zero line
+        double y0 = subY(0, maxV, minV, paneTop, paneH);
+        gc.setStroke(GRID); gc.setLineWidth(0.7);
+        gc.strokeLine(l.left, y0, l.right, y0);
+
+        drawSubLine(gc, l, series, start, n, maxV, minV, paneTop, paneH, c, def.getLineWeight());
+    }
+
+    /** ADX with +DI / -DI. */
+    private void drawAdxPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                             double paneTop, double paneH,
+                             int start, int end, int n, Color c) {
+        drawSubLine(gc, l, def.getSeries(), start, n, 100, 0, paneTop, paneH, c, def.getLineWeight());
+        List<Double> plus  = def.getExtraSeries("plusDI");
+        List<Double> minus = def.getExtraSeries("minusDI");
+        if (plus  != null) drawSubLine(gc, l, plus,  start, n, 100, 0, paneTop, paneH, Color.web("#3fb950"), 1.0);
+        if (minus != null) drawSubLine(gc, l, minus, start, n, 100, 0, paneTop, paneH, Color.web("#f85149"), 1.0);
+    }
+
+    /** Aroon oscillator with up/down lines. */
+    private void drawAroonPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                               double paneTop, double paneH,
+                               int start, int end, int n, Color c) {
+        drawSubLine(gc, l, def.getSeries(),            start, n, 100, -100, paneTop, paneH, c, def.getLineWeight());
+        List<Double> up   = def.getExtraSeries("up");
+        List<Double> down = def.getExtraSeries("down");
+        if (up   != null) drawSubLine(gc, l, up,   start, n, 100, 0, paneTop, paneH, Color.web("#3fb950"), 0.9);
+        if (down != null) drawSubLine(gc, l, down, start, n, 100, 0, paneTop, paneH, Color.web("#f85149"), 0.9);
+    }
+
+    /** Generic: auto-scale the visible range. */
+    private void drawGenericSubPane(GraphicsContext gc, ChartLayout l, IndicatorDefinition def,
+                                    double paneTop, double paneH,
+                                    int start, int end, int n, Color c) {
+        drawUnboundedOscPane(gc, l, def, paneTop, paneH, start, end, n, c);
+    }
+
+    // ── Draw: Price Axis ──────────────────────────────────────
+
+    private void drawPriceAxis(GraphicsContext gc, ChartLayout l, double maxP, double minP) {
         gc.setFill(TEXT_DIM);
         gc.setFont(FONT_SMALL);
         gc.setTextAlign(TextAlignment.LEFT);
@@ -686,15 +732,13 @@ public class CandlestickChartCanvas extends Canvas {
 
     // ── Draw: Time Axis ───────────────────────────────────────
 
-    private void drawTimeAxis(GraphicsContext gc, ChartLayout l,
-                              List<OhlcvBar> visible, double w) {
+    private void drawTimeAxis(GraphicsContext gc, ChartLayout l, List<OhlcvBar> visible, double w) {
         gc.setFill(TEXT_DIM);
         gc.setFont(FONT_SMALL);
         gc.setTextAlign(TextAlignment.CENTER);
         int n    = visible.size();
         int step = Math.max(1, n / 8);
         double barW = l.plotWidth() / n;
-
         for (int i = 0; i < n; i += step) {
             OhlcvBar bar = visible.get(i);
             if (bar.getOpenTime() == null) continue;
@@ -708,21 +752,20 @@ public class CandlestickChartCanvas extends Canvas {
     private void drawSeparators(GraphicsContext gc, ChartLayout l, double w) {
         gc.setStroke(BORDER);
         gc.setLineWidth(1.0);
-        gc.setLineDashes(null);
+        gc.setLineDashes();
         gc.strokeLine(l.left, l.priceBottom(), l.right, l.priceBottom());
-        if (l.volHeight > 0)
-            gc.strokeLine(l.left, l.volTop() + l.volHeight,
-                    l.right, l.volTop() + l.volHeight);
-        if (l.macdHeight > 0)
-            gc.strokeLine(l.left, l.macdTop() + l.macdHeight,
-                    l.right, l.macdTop() + l.macdHeight);
+        if (l.volH > 0)
+            gc.strokeLine(l.left, l.volTop() + l.volH, l.right, l.volTop() + l.volH);
+        for (int i = 0; i < l.subCount; i++) {
+            double y = l.subPaneTop(i) + l.subPaneH;
+            gc.strokeLine(l.left, y, l.right, y);
+        }
     }
 
-    // ── Draw: Crosshair ───────────────────────────────────────
+    // ── Draw: Crosshair ──────────────────────────────────────
 
     private void drawCrosshair(GraphicsContext gc, ChartLayout l,
-                               List<OhlcvBar> visible, double maxP, double minP,
-                               double w) {
+                               List<OhlcvBar> visible, double maxP, double minP) {
         if (mouseX < l.left || mouseX > l.right) return;
 
         gc.setStroke(CROSS);
@@ -730,9 +773,9 @@ public class CandlestickChartCanvas extends Canvas {
         gc.setLineDashes(4, 4);
         gc.strokeLine(mouseX, l.priceTop(), mouseX, l.priceBottom());
         gc.strokeLine(l.left, mouseY, l.right, mouseY);
-        gc.setLineDashes(null);
+        gc.setLineDashes();
 
-        // Price label at right axis
+        // Price label
         double price = yToPrice(mouseY, maxP, minP, l);
         gc.setFill(Color.web("#388bfd"));
         gc.fillRect(l.right + 1, mouseY - 9, PADDING_RIGHT - 4, 18);
@@ -741,32 +784,23 @@ public class CandlestickChartCanvas extends Canvas {
         gc.setTextAlign(TextAlignment.LEFT);
         gc.fillText(fmtPrice(price), l.right + 4, mouseY + 4);
 
-        // Determine which candle is under the mouse
+        // Candle tooltip
         int n    = visible.size();
         double barW = l.plotWidth() / Math.max(1, n);
-        int barIdx = (int)((mouseX - l.left) / barW);
-        barIdx = Math.max(0, Math.min(n - 1, barIdx));
-
-        if (barIdx >= 0 && barIdx < visible.size()) {
+        int barIdx  = Math.max(0, Math.min(n - 1, (int)((mouseX - l.left) / barW)));
+        if (barIdx < n) {
             OhlcvBar bar = visible.get(barIdx);
-
-            // OHLCV tooltip box near the mouse
             drawTooltip(gc, bar, mouseX, l.priceTop() + 4);
-
-            // Date label in the time-axis zone at the bottom of the chart
             if (bar.getOpenTime() != null) {
-                String dateStr = bar.getOpenTime().format(
-                        DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm"));
-                double labelW = 140, labelH = 16;
-                double labelX = Math.max(l.left + labelW / 2,
-                        Math.min(l.right - labelW / 2, mouseX));
-
+                String dateStr = bar.getOpenTime().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm"));
+                double lw = 140, lh = 16;
+                double lx = Math.max(l.left + lw / 2, Math.min(l.right - lw / 2, mouseX));
                 gc.setFill(Color.web("#388bfd"));
-                gc.fillRoundRect(labelX - labelW / 2, l.priceBottom() + 2, labelW, labelH, 4, 4);
+                gc.fillRoundRect(lx - lw / 2, l.priceBottom() + 2, lw, lh, 4, 4);
                 gc.setFill(Color.WHITE);
                 gc.setFont(FONT_SMALL);
                 gc.setTextAlign(TextAlignment.CENTER);
-                gc.fillText(dateStr, labelX, l.priceBottom() + 14);
+                gc.fillText(dateStr, lx, l.priceBottom() + 14);
             }
         }
     }
@@ -780,15 +814,13 @@ public class CandlestickChartCanvas extends Canvas {
                 "C: " + fmtPrice(bar.getClose().doubleValue()),
                 "V: " + fmtVol(bar.getVolume().doubleValue())
         };
-        double bw = 130, bh = lines.length * 16 + 10;
+        double bw = 140, bh = lines.length * 16 + 10;
         double bx = Math.min(x + 10, getWidth() - bw - 10);
-
         gc.setFill(Color.web("#1c2128ee"));
         gc.fillRoundRect(bx, y, bw, bh, 6, 6);
         gc.setStroke(bull ? BULL_BODY : BEAR_BODY);
         gc.setLineWidth(1);
         gc.strokeRoundRect(bx, y, bw, bh, 6, 6);
-
         gc.setFill(TEXT_MAIN);
         gc.setFont(FONT_SMALL);
         gc.setTextAlign(TextAlignment.LEFT);
@@ -800,35 +832,23 @@ public class CandlestickChartCanvas extends Canvas {
 
     private void drawLegend(GraphicsContext gc, ChartLayout l) {
         double lx = l.left + 8;
-        double ly = l.priceTop() + 18;
-
+        double ly = l.priceTop() + 16;
         gc.setFont(FONT_SMALL);
         gc.setTextAlign(TextAlignment.LEFT);
-
-        Object[][] items = {
-                {showEma,       EMA_FAST, "EMA Fast"},
-                {showEma,       EMA_SLOW, "EMA Slow"},
-                {showEma,       EMA_50,   "EMA 50"},
-                {showEma,       EMA_200,  "EMA 200"},
-                {showBollinger, BB_UPPER, "Bollinger"},
-                {showIchimoku,  ICH_TENKAN, "Ichimoku"},
-        };
-
-        for (Object[] item : items) {
-            boolean show = (boolean) item[0];
-            if (!show) continue;
-            Color c = (Color) item[1];
-            String label = (String) item[2];
+        for (IndicatorDefinition def : indicators) {
+            if (!def.isVisible() || def.getPane() != DisplayPane.PRICE) continue;
+            Color c = Color.web(def.getColor());
             gc.setStroke(c);
             gc.setLineWidth(2);
             gc.strokeLine(lx, ly - 4, lx + 16, ly - 4);
             gc.setFill(TEXT_DIM);
-            gc.fillText(label, lx + 20, ly);
-            lx += gc.getFont().getSize() * label.length() * 0.6 + 32;
+            gc.fillText(def.getLabel(), lx + 20, ly);
+            lx += def.getLabel().length() * 6.5 + 32;
+            if (lx > l.right - 100) break;
         }
     }
 
-    // ── Draw: Empty state ────────────────────────────────────
+    // ── Draw: Empty state ─────────────────────────────────────
 
     private void drawEmpty(GraphicsContext gc, double w, double h) {
         gc.setFill(BG);
@@ -836,82 +856,61 @@ public class CandlestickChartCanvas extends Canvas {
         gc.setFill(TEXT_DIM);
         gc.setFont(Font.font("Segoe UI", 16));
         gc.setTextAlign(TextAlignment.CENTER);
-        gc.fillText("📈 Select a symbol and timeframe to load chart",
-                w / 2, h / 2);
+        gc.fillText("📈 Select a symbol and timeframe to load chart", w / 2, h / 2);
     }
 
     // ── Mouse Handlers ────────────────────────────────────────
 
     private void setupMouseHandlers() {
-        setOnMouseMoved(this::onMouseMoved);
+        setOnMouseMoved(e -> { mouseX = e.getX(); mouseY = e.getY(); showCrosshair = true; render(); });
         setOnMouseDragged(this::onMouseDragged);
-        setOnMousePressed(this::onMousePressed);
-        setOnMouseExited(e -> { showCrosshair = false; render(); });
+        setOnMousePressed(e -> { dragStartX = e.getX(); dragStartBar = startBarIndex; });
+        setOnMouseExited(e  -> { showCrosshair = false; render(); });
         setOnScroll(this::onScroll);
-    }
-
-    private void onMouseMoved(MouseEvent e) {
-        mouseX = e.getX();
-        mouseY = e.getY();
-        showCrosshair = true;
-        render();
-    }
-
-    private void onMousePressed(MouseEvent e) {
-        dragStartX   = e.getX();
-        dragStartBar = startBarIndex;
     }
 
     private void onMouseDragged(MouseEvent e) {
         if (bars == null || bars.isEmpty()) return;
-        double dx    = e.getX() - dragStartX;
-        double barW  = (getWidth() - PADDING_LEFT - PADDING_RIGHT)
-                / Math.max(1, visibleBars);
-        int shift    = (int)(dx / barW);
-        startBarIndex = Math.max(0,
-                Math.min(bars.size() - visibleBars,
-                        dragStartBar - shift));
-        mouseX = e.getX();
-        mouseY = e.getY();
+        double dx   = e.getX() - dragStartX;
+        double barW = (getWidth() - PADDING_LEFT - PADDING_RIGHT) / Math.max(1, visibleBars);
+        int shift   = (int)(dx / barW);
+        startBarIndex = Math.max(0, Math.min(bars.size() - visibleBars, dragStartBar - shift));
+        mouseX = e.getX(); mouseY = e.getY();
         render();
     }
 
     private void onScroll(ScrollEvent e) {
         if (bars == null || bars.isEmpty()) return;
-        double delta = e.getDeltaY();
-
-        // Compute which bar is under the mouse — zoom pivots around that bar
-        double plotW = getWidth() - PADDING_LEFT - PADDING_RIGHT;
-        double relX  = e.getX() - PADDING_LEFT;
+        double delta    = e.getDeltaY();
+        double plotW    = getWidth() - PADDING_LEFT - PADDING_RIGHT;
+        double relX     = e.getX() - PADDING_LEFT;
         double fraction = (plotW > 0) ? Math.max(0, Math.min(1, relX / plotW)) : 0.5;
-        // The bar index (in the full bars list) that should stay under the mouse
-        int anchorBar = startBarIndex + (int)(fraction * visibleBars);
+        // Bar index (absolute) that should stay fixed under the mouse
+        int anchor = startBarIndex + (int)(fraction * visibleBars);
 
-        int oldVisible = visibleBars;
-        if (delta < 0) {
-            // Zoom out — show more bars
-            visibleBars = Math.min(bars.size(), (int)(visibleBars * 1.15));
-        } else {
-            // Zoom in — show fewer bars
-            visibleBars = Math.max(5, (int)(visibleBars * 0.87));
-        }
-        visibleBars = Math.min(bars.size(), Math.max(1, visibleBars));
+        if (delta < 0) visibleBars = Math.min(bars.size(), (int)(visibleBars * 1.15));
+        else           visibleBars = Math.max(5, (int)(visibleBars * 0.87));
 
-        // Adjust startBarIndex so the anchor bar stays under the mouse
-        startBarIndex = anchorBar - (int)(fraction * visibleBars);
-        startBarIndex = Math.max(0, Math.min(bars.size() - visibleBars, startBarIndex));
+        visibleBars   = Math.max(1, Math.min(visibleBars, bars.size()));
+        startBarIndex = Math.max(0, Math.min(bars.size() - visibleBars,
+                anchor - (int)(fraction * visibleBars)));
         render();
     }
 
-    // ── Utility: Line series drawing ──────────────────────────
+    // ── Line series helpers ───────────────────────────────────
 
-    private void drawLineSeries(GraphicsContext gc, ChartLayout l,
-                                List<Double> series, int start, int end, int n,
-                                double maxP, double minP, Color color, double width) {
+    /**
+     * Draws a line series from a list that covers the FULL bar history.
+     * {@code start} is the absolute index of the first visible bar.
+     */
+    private void drawLineSeriesAbsolute(GraphicsContext gc, ChartLayout l,
+                                        List<Double> series, int start, int n,
+                                        double maxP, double minP,
+                                        Color color, double width) {
         if (series == null || series.isEmpty()) return;
         gc.setStroke(color);
         gc.setLineWidth(width);
-        gc.setLineDashes(null);
+        gc.setLineDashes();
         gc.beginPath();
         boolean started = false;
         double barW = l.plotWidth() / n;
@@ -923,102 +922,108 @@ public class CandlestickChartCanvas extends Canvas {
             double x = l.left + (i + 0.5) * barW;
             double y = priceToY(val, maxP, minP, l);
             if (!started) { gc.moveTo(x, y); started = true; }
-            else          gc.lineTo(x, y);
+            else gc.lineTo(x, y);
         }
         gc.stroke();
     }
 
-    private void drawSubLineSeries(GraphicsContext gc, List<Double> series,
-                                   int start, int end, int n,
-                                   double maxV, double minV,
-                                   double areaTop, double areaH,
-                                   Color color, double width) {
-        if (series == null) return;
-        double barW = (getWidth() - PADDING_LEFT - PADDING_RIGHT) / n;
+    private void drawSubLine(GraphicsContext gc, ChartLayout l,
+                             List<Double> series, int start, int n,
+                             double maxV, double minV,
+                             double paneTop, double paneH,
+                             Color color, double width) {
+        if (series == null || series.isEmpty()) return;
         gc.setStroke(color);
         gc.setLineWidth(width);
+        gc.setLineDashes();
         gc.beginPath();
         boolean started = false;
+        double barW = l.plotWidth() / n;
         for (int i = 0; i < n; i++) {
             int idx = start + i;
             if (idx >= series.size()) break;
             double val = series.get(idx);
             if (Double.isNaN(val)) { started = false; continue; }
-            double x = PADDING_LEFT + (i + 0.5) * barW;
-            double y = subY(val, maxV, minV, areaTop, areaH);
+            double x = l.left + (i + 0.5) * barW;
+            double y = subY(val, maxV, minV, paneTop, paneH);
             if (!started) { gc.moveTo(x, y); started = true; }
-            else          gc.lineTo(x, y);
+            else gc.lineTo(x, y);
         }
         gc.stroke();
+    }
+
+    // ── Price range helpers for indicators ───────────────────
+
+    private void extendPriceRange(IndicatorDefinition def, int start, int end) {
+        // no-op: range is computed in render() directly
+    }
+
+    private double visibleMax(List<Double> series, int start, int end) {
+        if (series == null || series.isEmpty()) return Double.NEGATIVE_INFINITY;
+        double m = Double.NEGATIVE_INFINITY;
+        for (int i = start; i <= end && i < series.size(); i++) {
+            double v = series.get(i);
+            if (!Double.isNaN(v)) m = Math.max(m, v);
+        }
+        return m == Double.NEGATIVE_INFINITY ? Double.NEGATIVE_INFINITY : m;
+    }
+
+    private double visibleMin(List<Double> series, int start, int end) {
+        if (series == null || series.isEmpty()) return Double.POSITIVE_INFINITY;
+        double m = Double.POSITIVE_INFINITY;
+        for (int i = start; i <= end && i < series.size(); i++) {
+            double v = series.get(i);
+            if (!Double.isNaN(v)) m = Math.min(m, v);
+        }
+        return m == Double.POSITIVE_INFINITY ? Double.POSITIVE_INFINITY : m;
     }
 
     // ── Coordinate transforms ─────────────────────────────────
 
     private double priceToY(double price, double maxP, double minP, ChartLayout l) {
-        double range = Math.max(maxP - minP, 0.0001);
-        return l.priceTop() + l.priceHeight * (1.0 - (price - minP) / range);
+        double range = Math.max(maxP - minP, 1e-10);
+        return l.priceTop() + l.priceH * (1.0 - (price - minP) / range);
     }
 
     private double yToPrice(double y, double maxP, double minP, ChartLayout l) {
-        double range = Math.max(maxP - minP, 0.0001);
-        return maxP - (y - l.priceTop()) / l.priceHeight * range;
+        double range = Math.max(maxP - minP, 1e-10);
+        return maxP - (y - l.priceTop()) / l.priceH * range;
     }
 
     private double subY(double val, double maxV, double minV,
                         double top, double height) {
-        double range = Math.max(Math.abs(maxV - minV), 0.0001);
+        double range = Math.max(Math.abs(maxV - minV), 1e-10);
         return top + height * (1.0 - (val - minV) / range);
     }
 
-    private double getVisibleMax(List<Double> series, int start, int end) {
-        double max = Double.NEGATIVE_INFINITY;
-        for (int i = start; i <= end && i < series.size(); i++) {
-            if (!Double.isNaN(series.get(i)))
-                max = Math.max(max, series.get(i));
-        }
-        return max == Double.NEGATIVE_INFINITY ? 0 : max;
-    }
-
-    private double getVisibleMin(List<Double> series, int start, int end) {
-        double min = Double.POSITIVE_INFINITY;
-        for (int i = start; i <= end && i < series.size(); i++) {
-            if (!Double.isNaN(series.get(i)))
-                min = Math.min(min, series.get(i));
-        }
-        return min == Double.POSITIVE_INFINITY ? 0 : min;
-    }
+    // ── Formatting ────────────────────────────────────────────
 
     private String fmtPrice(double p) {
-        if (p >= 1000) return String.format("%.2f", p);
-        if (p >= 1)    return String.format("%.4f", p);
+        if (Double.isNaN(p) || Double.isInfinite(p)) return "—";
+        if (p >= 10000) return String.format("%.2f", p);
+        if (p >= 1000)  return String.format("%.2f", p);
+        if (p >= 1)     return String.format("%.4f", p);
         return String.format("%.8f", p);
     }
 
-    private Color colorForSr(SRLevel sr) {
-        return switch (sr.source()) {
-            case FIBONACCI -> FIB_LINE;
-            case PIVOT     -> PIVOT_LINE;
-            case SWING     -> SR_SUP;
-        };
-    }
-
     private String fmtVol(double v) {
-        if (v >= 1_000_000) return String.format("%.2fM", v / 1_000_000);
-        if (v >= 1_000)     return String.format("%.2fK", v / 1_000);
+        if (v >= 1_000_000_000) return String.format("%.2fB", v / 1_000_000_000);
+        if (v >= 1_000_000)     return String.format("%.2fM", v / 1_000_000);
+        if (v >= 1_000)         return String.format("%.2fK", v / 1_000);
         return String.format("%.2f", v);
     }
 
-    // ── Layout helper record ──────────────────────────────────
+    // ── Layout record ─────────────────────────────────────────
 
     private record ChartLayout(
             double left, double top, double right, double bottom,
-            double priceHeight, double volHeight, double macdHeight, double rsiHeight
+            double priceH, double volH, double subPaneH, long subCount
     ) {
         double priceTop()   { return top; }
-        double priceBottom(){ return top + priceHeight; }
+        double priceBottom(){ return top + priceH; }
         double volTop()     { return priceBottom(); }
-        double macdTop()    { return volTop() + volHeight; }
-        double rsiTop()     { return macdTop() + macdHeight; }
+        double subPanesTop(){ return volTop() + volH; }
+        double subPaneTop(int i) { return subPanesTop() + i * subPaneH; }
         double plotWidth()  { return right - left; }
     }
 }
